# bulkexec

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
src/bulkexec/: __main__.py
