[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bulkexec"
version = "0.0.1"
authors = [
  { name="Tristan Gaudreault", email="tristan@tristangaudreault.com" },
]
description = "A simple bulk function execution package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/tristangaudreault/bulkexec"
Issues = "https://github.com/tristangaudreault/bulkexec/issues"